; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_s6sy761.c_s6sy761_report_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_s6sy761.c_s6sy761_report_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s6sy761_data = type { i32 }

@MT_TOOL_FINGER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.s6sy761_data*, i32*, i32)* @s6sy761_report_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @s6sy761_report_release(%struct.s6sy761_data* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.s6sy761_data*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.s6sy761_data* %0, %struct.s6sy761_data** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.s6sy761_data*, %struct.s6sy761_data** %4, align 8
  %8 = getelementptr inbounds %struct.s6sy761_data, %struct.s6sy761_data* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @input_mt_slot(i32 %9, i32 %10)
  %12 = load %struct.s6sy761_data*, %struct.s6sy761_data** %4, align 8
  %13 = getelementptr inbounds %struct.s6sy761_data, %struct.s6sy761_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @MT_TOOL_FINGER, align 4
  %16 = call i32 @input_mt_report_slot_state(i32 %14, i32 %15, i32 0)
  %17 = load %struct.s6sy761_data*, %struct.s6sy761_data** %4, align 8
  %18 = getelementptr inbounds %struct.s6sy761_data, %struct.s6sy761_data* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @input_sync(i32 %19)
  ret void
}

declare dso_local i32 @input_mt_slot(i32, i32) #1

declare dso_local i32 @input_mt_report_slot_state(i32, i32, i32) #1

declare dso_local i32 @input_sync(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
